welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: '(' expected but identifier found.
while nbPas!=0{
      ^Variables:13: error: illegal start of simple expression
	}
        ^